feat:   新增ocr，医生推荐，图像压缩，vite代理等相关功能开发。
